# epoekie

./: CONTRIBUTING.md  Cargo.toml  MUTUALISM_KPI.md  README.md  SUBSTRATE_ADAPTATION.md  SYMBIONT_CHARTER.md  THEORY-EPOEKIE-SYMBIO-LOGIC.md
.github/workflows/: ci.yml
examples/: demo.rs
src/: lib.rs
